--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/fragments/sidebar.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/fragments/sidebar.html
@@ -36,6 +36,7 @@
                 <h6 class="collapse-header">납품</h6>
                 <a class="collapse-item" th:href="@{/task/outgoing}">생산계획 납품</a>
                 <a class="collapse-item" th:href="@{/task/outgoing-select}">선택품 납품</a>
+                <a class="collapse-item" th:href="@{/task/outgoing-manual}">수동 납품</a>
                 <a class="collapse-item" th:href="@{/task/order-history}">납품 현황</a>
             </div>
         </div>
