--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-part-stock.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-part-stock.html
@@ -53,8 +53,8 @@
                 </div>
 
                 <div class="row justify-content-center">
-                        <div class="col">
-                            <table class="table table-striped" style="overflow-y: scroll; height: 70vh;">
+                        <div class="col" style="overflow-y: scroll; height: 70vh;">
+                            <table class="table table-striped">
                                 <thead>
                                 <tr>
                                     <th class="col-1">회사</th>
